--- a/Ovingsoppgaver/Opg1.html
+++ b/Ovingsoppgaver/Opg1.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oppgave 1</title>
 </head>
 <body>
-    <p>Hei <span id ="user"></span></p>
+    <p>Hei, <span id ="user"></span></p>
 
     <script>
         /* Vi har hentet bruker infomarsjon, og lagret navnet til brukeren i en variabel kalt user_name */
