--- a/Ovingsoppgaver/errors.html
+++ b/Ovingsoppgaver/errors.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Oppgave 2</title>
 </head>
 <body>
     <p id="melding"></p>
@@ -13,13 +13,13 @@
         const userName = "David"
 
         //Vi har hentet fødselspret til brukeren og lagret det i variabelen user_birthyear
-        const userBirthyear = 2000
+        const birthyear = 2000
 
         //Vi regner ut alder ved å ta året vi er i minus fødselsår, og lagrer svaret i en ny variabel kalt age 
-        let age = 2025 -user = birthyear
+        const age = 2025 - birthyear
 
         //Så lager vi en tekst for utskrift ved hjelp av konktatinering
-        const utskrift = "Hei " user_name + " (" + age + "år)";
+        const utskrift = "Hei " + userName +  ( + age + år)
         
         //... Og skriver den ut til elementet med id melding
         document.getElementById("melding").innerHTML = utskrift;
